backend-mtls/backend-mtls.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-mtls
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mtls-app
  name: mtls-app
  namespace: test-mtls
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: mtls-app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtls-app
  namespace: test-mtls
spec:
  selector:
    matchLabels:
      app: mtls-app
  replicas: 2
  template:
    metadata:
      labels:
        app: mtls-app
    spec:
      containers:
        - name: mtls-app
          imagePullPolicy: Always
          image: nginx:1.23.2
          ports:
            - containerPort: 8443
          volumeMounts:
          - mountPath: /etc/nginx/ssl
            name: secret-volume
          - mountPath: /etc/nginx/client_certs
            name: ca-volume
          - mountPath: /etc/nginx/conf.d
            name: configmap-volume
          resources:
            limits:
              cpu: 700m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 20Mi
      volumes:
      - name: secret-volume
        secret:
          secretName: backend.com
      - name: ca-volume
        secret:
          secretName: ca.bundle
      - name: configmap-volume
        configMap:
          name: mtls-app-nginx-cm
